--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@ kbd {
 <p>navi_type:</p>
 
 <ul>
-<li>type_healthBeauty (健康美容)</li>
-<li>type_education (教育培训)</li>
-<li>type_tourismAndPension (旅游养老)</li>
-<li>type_fresh (农业生鲜)</li>
+<li>CATEGORY_COS (健康美容)</li>
+<li>CATEGORY_EDU (教育培训)</li>
+<li>CATEGORY_TRAVEL (旅游养老)</li>
+<li>CATEGORY_COMMUNITY (农业生鲜)</li>
+<li>CATEGORY_LIVING (视频直播)</li>
+<li>CATEGORY_MEDICAL (医疗抗衰)</li>
 <li>type_eShop (网上商城)</li>
-<li>type_liveStreaming (视频直播)</li>
-<li>type_medicalTreatment (医疗抗衰)</li>
 <li>type_living (跳转到直播)</li>
 <li>type_video (跳转到视频)</li>
 <li>type_url (跳转到url)</li>
