--- a/index.html
+++ b/index.html
@@ -367,16 +367,25 @@ kbd {
 <p>navi_type:</p>
 
 <ul>
-<li>CATEGORY_COS (健康美容)</li>
-<li>CATEGORY_EDU (教育培训)</li>
-<li>CATEGORY_TRAVEL (旅游养老)</li>
-<li>CATEGORY_COMMUNITY (农业生鲜)</li>
-<li>CATEGORY_LIVING (视频直播)</li>
-<li>CATEGORY_MEDICAL (医疗抗衰)</li>
-<li>type_eShop (网上商城)</li>
-<li>type_living (跳转到直播)</li>
-<li>type_video (跳转到视频)</li>
-<li>type_url (跳转到url)</li>
+<li>CATEGORY<em>COS</em>PRO_DETAIL (健康美容-商品详情)</li>
+<li>CATEGORY<em>COS</em>SHOP_DETAIL (健康美容-商店详情)</li>
+<li><p>CATEGORY<em>COS</em>EXPERT_DETAIL (健康美容-专家详情)</p></li>
+<li><p>CATEGORY<em>EDU</em>PRO_DETAIL (教育培训-服务详情)</p></li>
+<li><p>CATEGORY<em>EDU</em>SHOP_DETAIL (教育培训-机构详情)</p></li>
+<li><p>CATEGORY<em>EDU</em>EXPERT_DETAIL (教育培训-专家详情)</p></li>
+<li><p>CATEGORY<em>TRAVEL</em>PRO_DETAIL (旅游养老-服务)</p></li>
+<li><p>CATEGORY<em>TRAVEL</em>SHOP_DETAIL (旅游养老-机构)</p></li>
+<li><p>CATEGORY<em>TRAVEL</em>EXPERT_DETAIL (旅游养老-专家详情)</p></li>
+<li><p>CATEGORY<em>COMMUNITY</em>PRO_DETAIL (农业生鲜)</p></li>
+<li><p>CATEGORY<em>COMMUNITY</em>SHOP_DETAIL (农业生鲜)</p></li>
+<li><p>CATEGORY<em>MEDICAL</em>PRO_DETAIL  (医疗抗衰-服务)</p></li>
+<li><p>CATEGORY<em>MEDICAL</em>SHOP_DETAIL  (医疗抗衰-机构)</p></li>
+<li><p>CATEGORY<em>MEDICAL</em>EXPERT_DETAIL  (医疗抗衰-专家详情)</p></li>
+<li><p>CATEGORY_LIVING (视频直播)</p></li>
+<li><p>type_eShop (网上商城)</p></li>
+<li><p>type_living (跳转到直播)</p></li>
+<li><p>type_video (跳转到视频)</p></li>
+<li><p>type_url (跳转到url)</p></li>
 </ul>
 
 <h4 id="toc_8">category-1 (一长两短)</h4>
