--- a/index.html
+++ b/index.html
@@ -360,11 +360,7 @@ kbd {
 <img src="body-4.png" alt="">
 <img src="body-5.png" alt=""></p>
 
-<h3 id="toc_6">body细分样式：</h3>
-
-<h3 id="toc_7">list:[productDetail]</h3>
-
-<p>navi_type:</p>
+<h2 id="toc_6">navi_type(首页共用，body,header):</h2>
 
 <ul>
 <li>CATEGORY<em>COS</em>PRO_DETAIL (健康美容-商品详情)</li>
@@ -388,7 +384,11 @@ kbd {
 <li><p>type_url (跳转到url)</p></li>
 </ul>
 
-<h4 id="toc_8">category-1 (一长两短)</h4>
+<h3 id="toc_7">body细分样式：</h3>
+
+<h3 id="toc_8">list:[productDetail]</h3>
+
+<h4 id="toc_9">category-1 (一长两短)</h4>
 
 <p><img src="category-1.png" alt=""></p>
 
@@ -440,7 +440,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_9">category-2 (轮训)</h4>
+<h4 id="toc_10">category-2 (轮训)</h4>
 
 <p><img src="category-2.png" alt=""></p>
 
@@ -484,7 +484,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_10">category-3 (无限右滑)</h4>
+<h4 id="toc_11">category-3 (无限右滑)</h4>
 
 <p><img src="category-3.png" alt=""></p>
 
@@ -536,7 +536,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_11">category-4 (两短)</h4>
+<h4 id="toc_12">category-4 (两短)</h4>
 
 <p><img src="category-4.png" alt=""></p>
 
@@ -561,7 +561,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_12">category-5 (两短 2)</h4>
+<h4 id="toc_13">category-5 (两短 2)</h4>
 
 <p><img src="category-5.png" alt=""></p>
 
@@ -594,7 +594,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_13">category-6 (四短-带标题)</h4>
+<h4 id="toc_14">category-6 (四短-带标题)</h4>
 
 <p><img src="category-6.png" alt=""></p>
 
@@ -640,7 +640,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_14">category-7 (一长带标题)</h4>
+<h4 id="toc_15">category-7 (一长带标题)</h4>
 
 <p><img src="category-7.png" alt=""></p>
 
@@ -722,7 +722,7 @@ kbd {
     ]
 }</code></pre></div>
 
-<h4 id="toc_15">category-8 (两短-带标题)</h4>
+<h4 id="toc_16">category-8 (两短-带标题)</h4>
 
 <p><img src="category-8.png" alt=""></p>
 
@@ -780,7 +780,7 @@ kbd {
     }
 </code></pre></div>
 
-<h4 id="toc_16">category-9 (无限右滑+分类)</h4>
+<h4 id="toc_17">category-9 (无限右滑+分类)</h4>
 
 <p><img src="category-9.png" alt=""></p>
 
@@ -836,15 +836,15 @@ kbd {
     ]
 }</code></pre></div>
 
-<h3 id="toc_17">footer:</h3>
+<h3 id="toc_18">footer:</h3>
 
-<h4 id="toc_18">footer-1 (带tag-cell-tag)</h4>
+<h4 id="toc_19">footer-1 (带tag-cell-tag)</h4>
 
-<h5 id="toc_19">style 1</h5>
+<h5 id="toc_20">style 1</h5>
 
 <p><img src="footer-1.png" alt=""></p>
 
-<h5 id="toc_20">style 2</h5>
+<h5 id="toc_21">style 2</h5>
 
 <p><img src="footer-2.png" alt=""></p>
 
@@ -867,7 +867,7 @@ kbd {
 }
 </code></pre></div>
 
-<h4 id="toc_21">footer-2 (瀑布流)</h4>
+<h4 id="toc_22">footer-2 (瀑布流)</h4>
 
 <p><img src="footer-3.png" alt=""></p>
 
@@ -881,7 +881,7 @@ kbd {
 
 </code></pre></div>
 
-<h4 id="toc_22">footer-3 ()</h4>
+<h4 id="toc_23">footer-3 ()</h4>
 
 <p><img src="footer-6.png" alt=""></p>
 
@@ -893,7 +893,7 @@ kbd {
   {&quot;id&quot;:&quot;asdf&quot;,&quot;imagePath&quot;:&quot;http://www.ba&quot;id&quot;u.com&quot;,&quot;name&quot;:&quot;同芙美容连锁&quot;, rightTag:&quot;月售899&quot;, w&quot;id&quot;th:&quot;0.5&quot;,height:200,leftTag:&quot;1280&quot;} ,
   {&quot;id&quot;:&quot;asdf&quot;,&quot;imagePath&quot;:&quot;http://www.ba&quot;id&quot;u.com&quot;,&quot;name&quot;:&quot;同芙美容连锁&quot;, rightTag:&quot;月售899&quot;, w&quot;id&quot;th:&quot;0.5&quot;,height:200,leftTag:&quot;1280&quot;}  ]</code></pre></div>
 
-<h4 id="toc_23">footer-4 (带头像)</h4>
+<h4 id="toc_24">footer-4 (带头像)</h4>
 
 <p><img src="footer-7.png" alt=""></p>
 
@@ -921,21 +921,21 @@ kbd {
                 &quot;&quot;imagePath&quot;&quot;: &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;
             }  ]</code></pre></div>
 
-<h1 id="toc_24">Search Cell Style</h1>
+<h1 id="toc_25">Search Cell Style</h1>
 
-<h2 id="toc_25">cell-1</h2>
+<h2 id="toc_26">cell-1</h2>
 
 <p><img src="cell1.png" alt=""></p>
 
-<h2 id="toc_26">cell-2</h2>
+<h2 id="toc_27">cell-2</h2>
 
 <p><img src="cell2.png" alt=""></p>
 
-<h2 id="toc_27">cell-3</h2>
+<h2 id="toc_28">cell-3</h2>
 
 <p><img src="cell3.png" alt=""></p>
 
-<h3 id="toc_28">特别注意：</h3>
+<h3 id="toc_29">特别注意：</h3>
 
 <p>1.搜索商店时候：
 shop 
@@ -1027,102 +1027,102 @@ category/searchshop</p>
 }
 </code></pre></div>
 
-<h1 id="toc_29">API 描述：</h1>
+<h1 id="toc_30">API 描述：</h1>
 
-<h2 id="toc_30">首页：</h2>
+<h2 id="toc_31">首页：</h2>
 
 <p><img src="first-level.png" alt="">
 <img src="home-exa.png" alt=""></p>
 
-<h3 id="toc_31">红色部分： /tf/category/home</h3>
+<h3 id="toc_32">红色部分： /tf/category/home</h3>
 
-<h3 id="toc_32">红色部分-cell 更多： /tf/category/home-category</h3>
+<h3 id="toc_33">红色部分-cell 更多： /tf/category/home-category</h3>
 
-<h3 id="toc_33">绿色部分：/tf/category/home-footer</h3>
+<h3 id="toc_34">绿色部分：/tf/category/home-footer</h3>
 
 <hr>
 
-<h2 id="toc_34">商店详情</h2>
+<h2 id="toc_35">商店详情</h2>
 
 <p><img src="shop-detail.png" alt=""></p>
 
-<h3 id="toc_35">tf/category/shop</h3>
+<h3 id="toc_36">tf/category/shop</h3>
 
 <hr>
 
-<h2 id="toc_36">机构详情</h2>
+<h2 id="toc_37">机构详情</h2>
 
 <p><img src="shop-detail-sep.png" alt=""></p>
 
-<h3 id="toc_37">/tf/category/shopDetail</h3>
+<h3 id="toc_38">/tf/category/shopDetail</h3>
 
 <hr>
 
-<h2 id="toc_38">购物车分类</h2>
+<h2 id="toc_39">购物车分类</h2>
 
 <p><img src="shop-card-all.png" alt=""></p>
 
-<h3 id="toc_39">红色部分：/tf/category/shopMenu</h3>
+<h3 id="toc_40">红色部分：/tf/category/shopMenu</h3>
 
-<h3 id="toc_40">绿色部分：/tf/category/shopAll</h3>
+<h3 id="toc_41">绿色部分：/tf/category/shopAll</h3>
 
 <hr>
 
-<h2 id="toc_41">专家详情：</h2>
+<h2 id="toc_42">专家详情：</h2>
 
 <p><img src="exp-detail.png" alt=""></p>
 
-<h3 id="toc_42">/tf/category/expert</h3>
+<h3 id="toc_43">/tf/category/expert</h3>
 
 <hr>
 
 <p><img src="pro-d.png" alt=""></p>
 
-<h3 id="toc_43">/tf/category/productDetail</h3>
+<h3 id="toc_44">/tf/category/productDetail</h3>
 
 <hr>
 
-<h2 id="toc_44">各种推荐专用接口(用于各种详情下面的推荐)</h2>
+<h2 id="toc_45">各种推荐专用接口(用于各种详情下面的推荐)</h2>
 
-<h3 id="toc_45">/tf/category/productRecommend</h3>
+<h3 id="toc_46">/tf/category/productRecommend</h3>
 
-<h2 id="toc_46">评论专用接口(用于更多评论)</h2>
+<h2 id="toc_47">评论专用接口(用于更多评论)</h2>
 
-<h3 id="toc_47">/tf/category/productCommend</h3>
+<h3 id="toc_48">/tf/category/productCommend</h3>
 
-<h2 id="toc_48">筛选</h2>
+<h2 id="toc_49">筛选</h2>
 
 <p><img src="search.png" alt=""></p>
 
 <p><img src="search-type2.png" alt=""></p>
 
-<h3 id="toc_49">/tf/category/searchType 包括排序和筛选(可多选)，头部分类（图片可以无）</h3>
+<h3 id="toc_50">/tf/category/searchType 包括排序和筛选(可多选)，头部分类（图片可以无）</h3>
 
-<h3 id="toc_50">搜索商店 /tf/category/searchshop</h3>
+<h3 id="toc_51">搜索商店 /tf/category/searchshop</h3>
 
-<h3 id="toc_51">搜索商品 /tf/category/searchshop</h3>
+<h3 id="toc_52">搜索商品 /tf/category/searchshop</h3>
 
-<h2 id="toc_52">服务</h2>
+<h2 id="toc_53">服务</h2>
 
-<h3 id="toc_53">预约服务详情 /category/service/schedule</h3>
+<h3 id="toc_54">预约服务详情 /category/service/schedule</h3>
 
-<h3 id="toc_54">schedule, list两个对应两种不同的UI, schedule的优先级会更高</h3>
+<h3 id="toc_55">schedule, list两个对应两种不同的UI, schedule的优先级会更高</h3>
 
 <div><pre><code class="language-none"> &quot;schedule&quot;:[],##当 schedule = 5-1 的时候会出现
  &quot;list&quot;:[],
  &quot;dsp&quot;:&quot;预期说声哈&quot;</code></pre></div>
 
-<h5 id="toc_55">读取 schedule 字段</h5>
+<h5 id="toc_56">读取 schedule 字段</h5>
 
 <p><img src="service-1.png" alt=""></p>
 
-<h5 id="toc_56">读取 list 字段</h5>
+<h5 id="toc_57">读取 list 字段</h5>
 
 <p><img src="service-2.png" alt=""></p>
 
 <hr>
 
-<h3 id="toc_57">我的-预约列表 /category/service/list</h3>
+<h3 id="toc_58">我的-预约列表 /category/service/list</h3>
 
 <div><pre><code class="language-none">(全部)APPOINT_ALL, 
 (预约到店)SERVICE_OFFLINE, 
