--- a/index.html
+++ b/index.html
@@ -360,29 +360,32 @@ kbd {
 <img src="body-4.png" alt="">
 <img src="body-5.png" alt=""></p>
 
-<h2 id="toc_6">navi_type(首页共用，body,header):</h2>
+<h2 id="toc_6">navi_type(首页共用，body,footer):</h2>
 
-<ul>
-<li>CATEGORY<em>COS</em>PRO_DETAIL (健康美容-商品详情)</li>
-<li>CATEGORY<em>COS</em>SHOP_DETAIL (健康美容-商店详情)</li>
-<li><p>CATEGORY<em>COS</em>EXPERT_DETAIL (健康美容-专家详情)</p></li>
-<li><p>CATEGORY<em>EDU</em>PRO_DETAIL (教育培训-服务详情)</p></li>
-<li><p>CATEGORY<em>EDU</em>SHOP_DETAIL (教育培训-机构详情)</p></li>
-<li><p>CATEGORY<em>EDU</em>EXPERT_DETAIL (教育培训-专家详情)</p></li>
-<li><p>CATEGORY<em>TRAVEL</em>PRO_DETAIL (旅游养老-服务)</p></li>
-<li><p>CATEGORY<em>TRAVEL</em>SHOP_DETAIL (旅游养老-机构)</p></li>
-<li><p>CATEGORY<em>TRAVEL</em>EXPERT_DETAIL (旅游养老-专家详情)</p></li>
-<li><p>CATEGORY<em>COMMUNITY</em>PRO_DETAIL (农业生鲜)</p></li>
-<li><p>CATEGORY<em>COMMUNITY</em>SHOP_DETAIL (农业生鲜)</p></li>
-<li><p>CATEGORY<em>MEDICAL</em>PRO_DETAIL  (医疗抗衰-服务)</p></li>
-<li><p>CATEGORY<em>MEDICAL</em>SHOP_DETAIL  (医疗抗衰-机构)</p></li>
-<li><p>CATEGORY<em>MEDICAL</em>EXPERT_DETAIL  (医疗抗衰-专家详情)</p></li>
-<li><p>CATEGORY_LIVING (视频直播)</p></li>
-<li><p>type_eShop (网上商城)</p></li>
-<li><p>type_living (跳转到直播)</p></li>
-<li><p>type_video (跳转到视频)</p></li>
-<li><p>type_url (跳转到url)</p></li>
-</ul>
+<div><pre><code class="language-none">* CATEGORY_COS_PRO_DETAIL (健康美容-商品详情)
+* CATEGORY_COS_SHOP_DETAIL (健康美容-商店详情)
+* CATEGORY_COS_EXPERT_DETAIL (健康美容-专家详情)
+
+* CATEGORY_EDU_PRO_DETAIL (教育培训-服务详情)
+* CATEGORY_EDU_SHOP_DETAIL (教育培训-机构详情)
+* CATEGORY_EDU_EXPERT_DETAIL (教育培训-专家详情)
+
+* CATEGORY_TRAVEL_PRO_DETAIL (旅游养老-服务)
+* CATEGORY_TRAVEL_SHOP_DETAIL (旅游养老-机构)
+* CATEGORY_TRAVEL_EXPERT_DETAIL (旅游养老-专家详情)
+
+* CATEGORY_COMMUNITY_PRO_DETAIL (农业生鲜)
+* CATEGORY_COMMUNITY_SHOP_DETAIL (农业生鲜)
+
+* CATEGORY_MEDICAL_PRO_DETAIL  (医疗抗衰-服务)
+* CATEGORY_MEDICAL_SHOP_DETAIL  (医疗抗衰-机构)
+* CATEGORY_MEDICAL_EXPERT_DETAIL  (医疗抗衰-专家详情)
+
+* CATEGORY_LIVING (视频直播)
+* type_eShop (网上商城)
+* type_living (跳转到直播)
+* type_video (跳转到视频)
+* type_url (跳转到url)</code></pre></div>
 
 <h3 id="toc_7">body细分样式：</h3>
 
