--- a/index.html
+++ b/index.html
@@ -891,6 +891,10 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
     }
 }</code></pre></div>
 
+<div><pre><code class="language-none">category-10 旅游热门推荐（无限右滑）</code></pre></div>
+
+<p><img src="category-10.png" alt=""></p>
+
 <h3 id="toc_25">footer:</h3>
 
 <h4 id="toc_26">footer-1 (带tag-cell-tag)</h4>
